<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/title"
        android:id="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.25"/>

    <EditText
        android:id="@+id/input_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/first_integer"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteY="213dp"
        />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/second_integer"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/input_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteY="213dp"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/input_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/sub_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_text"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/input_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toRightOf="@id/add_button"
        />

    <Button
        android:id="@+id/mult_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mult_text"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/input_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/div_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div_text"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/input_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>